# schick

./: .gitignore  Main.hs  README.md  Schick.cabal  ci
test/: if-1
