name:                Schick
version:             0.1.0.0
synopsis:            SHell symbolIC execution
homepage:            https://github.com/mephi42/schick
license:             GPL-3
license-file:        LICENSE
author:              mephi42
maintainer:          mephi42@gmail.com
category:            Development
build-type:          Simple
cabal-version:       >=1.10

executable Schick
  main-is:             Main.hs
  build-depends:       base >=4.12 && <4.13
                     , containers == 0.6.2.1
                     , optparse-applicative == 0.15.1.0
                     , pretty-simple == 3.3.0.0
                     , ShellCheck == 0.7.1
                     , text == 1.2.4.0
  default-language:    Haskell2010
  ghc-options:         -Wall
